ad dpython script tag

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
 <script src="brython.js"></script>
 <script src="brython_stdlib.js"></script>
+<script type="text/python" src="main.py"></script>
 
 </body>
 
