--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,12 @@
       <header>
         <h1>Fun Flying Action</h1>
       </header>
-      <main id="game"></main>
+      <main id="game">
+          <div class="example" id="ex15">
+              <div id="zone15" style="padding:0;" class="zone">
+        <button style="background-color: #fff; border-width: 0px; color:#000;padding:0;font-size:24px;height:auto;" id="rot15">&#9658;</button>
+              </div></div>
+      </main>
       <section id="instructions">
         <p>Use the arrow keys to control your flyer!</p>
       </section>
@@ -21,3 +26,4 @@
     <script type="text/python" src="main.py"></script>
   </body>
 </html>
+
